--- a/CriminalIntent/bin/AndroidManifest.xml
+++ b/CriminalIntent/bin/AndroidManifest.xml
@@ -7,20 +7,27 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="com.bignerdranch.android.criminalintent.CrimeListActivity" >
+        <activity android:name=".CrimeListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.bignerdranch.android.criminalintent.CrimePagerActivity"
+        <activity android:name=".CrimePagerActivity"
+            android:label="@string/app_name" >
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".CrimeListActivity"/>
+        </activity>
+        <activity android:name=".CrimeCameraActivity"
+            android:screenOrientation="landscape"
             android:label="@string/app_name" >
         </activity>
     </application>
